--- a/.consulo/artifacts/plugin.xml
+++ b/.consulo/artifacts/plugin.xml
@@ -36,6 +36,7 @@
           <element id="zip-archive" name="google-py-app-engine-api.jar">
             <element id="module-output" name="google-py-app-engine-api" />
           </element>
+          <element id="library" level="project" name="snakeyaml" />
         </element>
       </element>
       <element id="directory" name="google-java-app-engine">
