--- a/google-py-app-engine-api/resources/META-INF/plugin.xml
+++ b/google-py-app-engine-api/resources/META-INF/plugin.xml
@@ -1,6 +1,8 @@
 <idea-plugin version="2">
 	<id>org.consulo.google-app-engine.py.api</id>
 	<name>Google App Engine Python API</name>
+	<version>1.0</version>
+	<category>Custom Languages</category>
 	<depends>org.consulo.google-app-engine.api</depends>
 	<depends>org.consulo.python</depends>
 </idea-plugin>
