--- a/google-java-app-engine/resources/META-INF/plugin.xml
+++ b/google-java-app-engine/resources/META-INF/plugin.xml
@@ -1,6 +1,8 @@
 <idea-plugin version="2">
 	<id>org.consulo.google-app-engine.java</id>
 	<name>Google App Engine Java</name>
+	<version>1.0</version>
+	<category>Custom Languages</category>
 	<depends>org.consulo.google-app-engine.api</depends>
 
 	<extensions defaultExtensionNs="com.intellij">
