--- a/google-py-app-engine-api/google-py-app-engine/resources/META-INF/plugin.xml
+++ b/google-py-app-engine-api/google-py-app-engine/resources/META-INF/plugin.xml
@@ -1,6 +1,8 @@
 <idea-plugin version="2">
 	<id>org.consulo.google-app-engine.py</id>
 	<name>Google App Engine Python</name>
+	<version>1.0</version>
+	<category>Custom Languages</category>
 	<depends>org.consulo.google-app-engine.py.api</depends>
 
 	<extensions defaultExtensionNs="com.intellij">
