--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,6 +1,8 @@
 <idea-plugin version="2">
 	<id>org.consulo.google-app-engine.api</id>
 	<name>Google App Engine API</name>
+	<version>1.0</version>
+	<category>Custom Languages</category>
 
 	<extensions defaultExtensionNs="com.intellij">
 		<remoteServer.type implementation="org.consulo.google.appengine.server.GoogleAppEngineServerType" />
