--- a/google-py-app-engine-api/resources/META-INF/plugin.xml
+++ b/google-py-app-engine-api/resources/META-INF/plugin.xml
@@ -2,7 +2,7 @@
 	<id>org.consulo.google-app-engine.py.api</id>
 	<name>Google App Engine Python API</name>
 	<version>1.0</version>
-	<category>Custom Languages</category>
+	<category>Web Frameworks</category>
 	<depends>org.consulo.google-app-engine.api</depends>
 	<depends>org.consulo.python</depends>
 </idea-plugin>
