--- a/google-py-app-engine-api/google-py-app-engine/resources/META-INF/plugin.xml
+++ b/google-py-app-engine-api/google-py-app-engine/resources/META-INF/plugin.xml
@@ -2,7 +2,7 @@
 	<id>org.consulo.google-app-engine.py</id>
 	<name>Google App Engine Python</name>
 	<version>1.0</version>
-	<category>Custom Languages</category>
+	<category>Web Frameworks</category>
 	<depends>org.consulo.google-app-engine.py.api</depends>
 
 	<extensions defaultExtensionNs="com.intellij">
