--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -2,7 +2,7 @@
 	<id>org.consulo.google-app-engine.api</id>
 	<name>Google App Engine API</name>
 	<version>1.0</version>
-	<category>Custom Languages</category>
+	<category>Web Frameworks</category>
 
 	<extensions defaultExtensionNs="com.intellij">
 		<remoteServer.type implementation="org.consulo.google.appengine.server.GoogleAppEngineServerType" />
