--- a/google-java-app-engine/resources/META-INF/plugin.xml
+++ b/google-java-app-engine/resources/META-INF/plugin.xml
@@ -4,16 +4,17 @@
 	<version>1.0</version>
 	<category>Web Frameworks</category>
 	<depends>org.consulo.google-app-engine.api</depends>
-	<depends optional="true">com.intellij.xml</depends>
+	<depends>org.mustbe.consulo.java.web</depends>
 
 	<extensions defaultExtensionNs="com.intellij.xml">
 		<schemaProvider implementation="org.consulo.google.appengine.java.descriptor.AppEngineWebSchemaProvider"/>
 		<dom.fileDescription implementation="org.consulo.google.appengine.java.descriptor.dom.AppEngineWebFileDescription"/>
 	</extensions>
+
 	<extensions defaultExtensionNs="com.intellij">
 		<sdkType implementation="org.consulo.google.appengine.java.sdk.JavaAppSdkType" />
 
-		<moduleExtensionProvider key="google-app-engine-java" parent-key="java"
+		<moduleExtensionProvider key="google-app-engine-java" parent-key="java-web"
 								 implementationClass="org.consulo.google.appengine.java.module.extension.JavaAppModuleExtensionProvider" />
 	</extensions>
 </idea-plugin>
