detect version for java app sdk
sdk corrections

--- a/google-py-app-engine-api/google-go-app-engine/resources/META-INF/plugin.xml
+++ b/google-py-app-engine-api/google-go-app-engine/resources/META-INF/plugin.xml
@@ -20,6 +20,7 @@
 	<version>1.0</version>
 	<category>Web Frameworks</category>>
 	<depends>org.consulo.google-app-engine.py.api</depends>
+	<depends>org.consulo.google.go</depends>
 
 	<extensions defaultExtensionNs="com.intellij">
 		<sdkType implementation="org.consulo.google.appengine.go.sdk.GoAppSdkType" />
