--- a/google-java-app-engine/resources/META-INF/plugin.xml
+++ b/google-java-app-engine/resources/META-INF/plugin.xml
@@ -1,40 +1,40 @@
 <!--
-  ~ Copyright 2013 must-be.org
-  ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License");
-  ~ you may not use this file except in compliance with the License.
-  ~ You may obtain a copy of the License at
-  ~
-  ~ http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~ Unless required by applicable law or agreed to in writing, software
-  ~ distributed under the License is distributed on an "AS IS" BASIS,
-  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~ See the License for the specific language governing permissions and
-  ~ limitations under the License.
+  - Copyright 2013-2016 consulo.io
+  -
+  - Licensed under the Apache License, Version 2.0 (the "License");
+  - you may not use this file except in compliance with the License.
+  - You may obtain a copy of the License at
+  -
+  - http://www.apache.org/licenses/LICENSE-2.0
+  -
+  - Unless required by applicable law or agreed to in writing, software
+  - distributed under the License is distributed on an "AS IS" BASIS,
+  - WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  - See the License for the specific language governing permissions and
+  - limitations under the License.
   -->
 
 <idea-plugin>
-	<id>org.consulo.google-app-engine.java</id>
+	<id>consulo.google-app-engine.java</id>
 	<name>Google App Engine Java</name>
-	<version>1.0</version>
+	<version>SNAPSHOT</version>
 	<category>Web Frameworks</category>
-	<depends>org.consulo.google-app-engine.api</depends>
+	<depends>consulo.google-app-engine.api</depends>
 	<depends>consulo.javaee</depends>
 
 	<extensions defaultExtensionNs="com.intellij.xml">
-		<schemaProvider implementation="org.consulo.google.appengine.java.descriptor.AppEngineWebSchemaProvider"/>
-		<dom.fileDescription implementation="org.consulo.google.appengine.java.descriptor.dom.AppEngineWebFileDescription"/>
+		<schemaProvider implementation="consulo.google.appengine.java.descriptor.AppEngineWebSchemaProvider"/>
+		<dom.fileDescription implementation="consulo.google.appengine.java.descriptor.dom.AppEngineWebFileDescription"/>
 	</extensions>
 
 	<extensions defaultExtensionNs="com.intellij">
-		<sdkType implementation="org.consulo.google.appengine.java.sdk.JavaAppSdkType" />
+		<sdkType implementation="consulo.google.appengine.java.sdk.JavaAppSdkType" />
 
 		<moduleExtensionProvider key="google-app-engine-java"
 								 parentKey="java-web"
 								 icon="/icons/appEngine.png"
 								 name="Google App Engine"
-								 immutableClass="org.consulo.google.appengine.java.module.extension.JavaAppModuleExtension"
-								 mutableClass="org.consulo.google.appengine.java.module.extension.JavaAppMutableModuleExtension" />
+								 immutableClass="consulo.google.appengine.java.module.extension.JavaAppModuleExtension"
+								 mutableClass="consulo.google.appengine.java.module.extension.JavaAppMutableModuleExtension" />
 	</extensions>
 </idea-plugin>
