--- a/google-py-app-engine-api/google-go-app-engine/resources/META-INF/plugin.xml
+++ b/google-py-app-engine-api/google-go-app-engine/resources/META-INF/plugin.xml
@@ -1,35 +1,35 @@
 <!--
-  ~ Copyright 2013 must-be.org
-  ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License");
-  ~ you may not use this file except in compliance with the License.
-  ~ You may obtain a copy of the License at
-  ~
-  ~ http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~ Unless required by applicable law or agreed to in writing, software
-  ~ distributed under the License is distributed on an "AS IS" BASIS,
-  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~ See the License for the specific language governing permissions and
-  ~ limitations under the License.
+  - Copyright 2013-2016 consulo.io
+  -
+  - Licensed under the Apache License, Version 2.0 (the "License");
+  - you may not use this file except in compliance with the License.
+  - You may obtain a copy of the License at
+  -
+  - http://www.apache.org/licenses/LICENSE-2.0
+  -
+  - Unless required by applicable law or agreed to in writing, software
+  - distributed under the License is distributed on an "AS IS" BASIS,
+  - WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  - See the License for the specific language governing permissions and
+  - limitations under the License.
   -->
 
 <idea-plugin>
-	<id>org.consulo.google-app-engine.go</id>
+	<id>consulo.google-app-engine.go</id>
 	<name>Google App Engine Go</name>
-	<version>1.0</version>
+	<version>SNAPSHOT</version>
 	<category>Web Frameworks</category>>
-	<depends>org.consulo.google-app-engine.py.api</depends>
+	<depends>consulo.google-app-engine.py.api</depends>
 	<depends>consulo.google.go</depends>
 
 	<extensions defaultExtensionNs="com.intellij">
-		<sdkType implementation="org.consulo.google.appengine.go.sdk.GoAppSdkType" />
+		<sdkType implementation="consulo.google.appengine.go.sdk.GoAppSdkType" />
 
 		<moduleExtensionProvider key="google-app-engine-go"
 								 parentKey="google-go"
 								 icon="/icons/appEngine.png"
 								 name="Google App Engine"
-								 immutableClass="org.consulo.google.appengine.go.module.extension.GoAppModuleExtension"
-								 mutableClass="org.consulo.google.appengine.go.module.extension.GoAppMutableModuleExtension" />
+								 immutableClass="consulo.google.appengine.go.module.extension.GoAppModuleExtension"
+								 mutableClass="consulo.google.appengine.go.module.extension.GoAppMutableModuleExtension" />
 	</extensions>
 </idea-plugin>
