--- a/plugin/src/main/resources/META-INF/plugin.xml
+++ b/plugin/src/main/resources/META-INF/plugin.xml
@@ -14,7 +14,7 @@
   - limitations under the License.
   -->
 
-<idea-plugin>
+<consulo-plugin>
 	<id>consulo.google-app-engine.api</id>
 	<name>Google App Engine API</name>
 	<version>SNAPSHOT</version>
@@ -24,4 +24,4 @@
 		<remoteServer.type implementation="consulo.google.appengine.server.GoogleAppEngineServerType" />
 		<remoteServer.deploymentSource.type implementation="consulo.google.appengine.server.GoogleAppEngineDeploymentSourceType" />
 	</extensions>
-</idea-plugin>
+</consulo-plugin>
