--- a/google-app-engine-api/pom.xml
+++ b/google-app-engine-api/pom.xml
@@ -40,7 +40,22 @@
 		</repository>
 	</repositories>
 
-	<dependencies>
-	
-	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>consulo.maven</groupId>
+				<artifactId>consulo-maven-plugin</artifactId>
+				<version>2-SNAPSHOT</version>
+				<extensions>true</extensions>
+				<executions>
+					<execution>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>generate-icon</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
