--- a/google-py-app-engine-api/google-py-app-engine/src/main/resources/META-INF/plugin.xml
+++ b/google-py-app-engine-api/google-py-app-engine/src/main/resources/META-INF/plugin.xml
@@ -21,6 +21,11 @@
 	<category>Web Frameworks</category>
 	<depends>consulo.google-app-engine.py.api</depends>
 
+	<tags>
+		<tag>web.framework</tag>
+		<tag>cloud</tag>
+	</tags>
+
 	<extensions defaultExtensionNs="com.intellij">
 		<sdkType implementation="consulo.google.appengine.py.sdk.PyAppSdkType" />
 
