--- a/plugin/src/main/resources/META-INF/plugin.xml
+++ b/plugin/src/main/resources/META-INF/plugin.xml
@@ -20,6 +20,11 @@
 	<version>SNAPSHOT</version>
 	<category>Web Frameworks</category>
 
+	<tags>
+		<tag>web.framework</tag>
+		<tag>cloud</tag>
+	</tags>
+
 	<extensions defaultExtensionNs="com.intellij">
 		<remoteServer.type implementation="consulo.google.appengine.server.GoogleAppEngineServerType" />
 		<remoteServer.deploymentSource.type implementation="consulo.google.appengine.server.GoogleAppEngineDeploymentSourceType" />
