--- a/plugin/src/main/resources/META-INF/plugin.xml
+++ b/plugin/src/main/resources/META-INF/plugin.xml
@@ -14,7 +14,7 @@
   - limitations under the License.
   -->
 
-<consulo-plugin>
+<consulo-plugin url="https://github.com/consulo/consulo-google-app-engine">
 	<id>consulo.google-app-engine.api</id>
 	<name>Google App Engine API</name>
 	<version>SNAPSHOT</version>
